# backend/docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/backendAPI",
     "paths": {
-        "/error": {
+        "/data": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -19,11 +19,11 @@
                 "tags": [
                     "analytics"
                 ],
-                "summary": "Get spans or logs detailing errors.",
+                "summary": "Get spans or logs with their associated information.",
                 "parameters": [
                     {
                         "description": "The optional search parameters",
-                        "name": "error",
+                        "name": "searchParams",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -33,7 +33,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of logs and spans detailing errors",
+                        "description": "List of logs and spans with their corresponding details.",
                         "schema": {
                             "$ref": "#/definitions/handler.DataResponseDTO"
                         }
@@ -158,7 +158,7 @@
         "handler.DataResponseDTO": {
             "type": "object",
             "properties": {
-                "errors": {
+                "data": {
                     "description": "The log or span representing the error",
                     "type": "array",
                     "items": {
